[package]
name = "tabss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.26"
clap = { version = "4.4", features = ["derive"] }
colorsys = "0.6.7"
crossterm = "0.27"
directories = "5"
futures = "0.3.28"
html-escape = "0.2.13"
html_parser = "0.7.0"
polodb_core = "4.4.0"
reqwest = { version = "0.11" }
rss = { version = "2", features = ["atom"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"] }
