[package]
name = "moccasin"
version = "0.1.2"
edition = "2021"
authors = ["Tobias Fried <friedtm@gmail.com>"]
license = "MIT"
description = "A TUI feed reader for RSS, Atom, and (aspirationally) Podcasts"
readme = "README.md"
homepage = "https://github.com/rektdeckard/moccasin"
repository = "https://github.com/rektdeckard/moccasin"
keywords = ["rss", "atom", "feed-reader", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "mcsn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colorsys = "0.6"
crossterm = "0.27"
directories = "5"
futures = "0.3"
html-escape = "0.2"
html_parser = "0.7.0"
log = "0.4.20"
polodb_core = "4.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
rss = { version = "2", features = ["atom"] }
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
simplelog = "0.12.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
toml_edit = "0.19"
tui = { package = "ratatui", version = "0.22", features = ["all-widgets"] }
